# simdxml

./: .gitignore  Cargo.toml  README.md
bench/: download-corpora.sh  pugixml-xpath.cpp  run.sh
crates/duckdb-xpath/: Cargo.toml
crates/duckdb-xpath/src/: lib.rs  scalar.rs
crates/simdxml/: Cargo.toml  README.md
crates/simdxml-cli/: Cargo.toml
crates/simdxml-cli/src/: main.rs
crates/simdxml/benches/: parse_bench.rs
crates/simdxml/src/: error.rs  lib.rs
crates/simdxml/src/batch/: mod.rs
crates/simdxml/src/index/: mod.rs  structural.rs  tags.rs
crates/simdxml/src/parallel/: mod.rs
crates/simdxml/src/persist/: mod.rs
crates/simdxml/src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs  sse42.rs
crates/simdxml/src/xpath/: ast.rs  eval.rs  mod.rs  parser.rs
crates/simdxml/tests/: bug_regression.rs  libxml2_conformance.rs  pugixml_conformance.rs  xpath_edge_cases.rs
testdata/: gen_bench_data.py  pugixml_xpath_tests.json  small.xml
testdata/bench/: attrheavy_large.xml  attrheavy_medium.xml  attrheavy_small.xml  nested_large.xml  nested_medium.xml  nested_small.xml  patent_large.xml  patent_medium.xml  patent_small.xml  textheavy_large.xml  textheavy_medium.xml  textheavy_small.xml
testdata/realworld/: patent-ep.xml  patent-us.xml
tests/data/: pugixml_xpath_tests.json
