[package]
name = "simdxml-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line XML/XPath tool powered by SIMD"
license = "MIT OR Apache-2.0"

[[bin]]
name = "simdxml"
path = "src/main.rs"

[dependencies]
simdxml = { path = "../simdxml" }
clap = { version = "4", features = ["derive"] }
