[package]
name = "simdxml"
version = "0.1.0"
edition = "2021"
description = "SIMD-accelerated XML parser with full XPath 1.0 support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cigrainger/simdxml"
keywords = ["xml", "xpath", "simd", "parser"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
nom = "7"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse_bench"
harness = false
